crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__list__oversaturated_cons.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List mkCons 42 (con (list integer) []) 9 of
  _ -> 0
--- unoptimized UPLC
(program 1.1.0
  (case
    [[[(force (builtin mkCons)) (con integer 42)] (con (list integer) [])]
      (con integer 9)]
    (lam generated_2 (lam generated_1 (con integer 0)))
    (con integer 0)))
--- optimized Core
let anf#1 : list int = mkCons 42 (con (list integer) []) in
let anf#2 : list int = anf#1 9 in
case@List anf#2 of
  _ -> 0
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam anf_3
      [(lam anf_4
        (case anf_4 (lam generated_6 (lam generated_5 (con integer 0))) (con integer 0)))
        [anf_3 (con integer 9)]])
      [[builtin_7 (con integer 42)] (con (list integer) [])]])
    (force (builtin mkCons))])
--- isolated pass
--- isolated ANF input
let anf#2 : list int = mkCons 42 (con (list integer) []) in
let anf#3 : list int = anf#2 9 in
case@List anf#3 of
  _ -> 0
--- isolated folded Core
let anf#2 : list int = mkCons 42 (con (list integer) []) in
let anf#3 : list int = anf#2 9 in
case@List anf#3 of
  _ -> 0
--- isolated cleaned Core
let anf#2 : list int = mkCons 42 (con (list integer) []) in
let anf#3 : list int = anf#2 9 in
case@List anf#3 of
  _ -> 0
--- isolated UPLC before
(program 1.1.0
  [(lam anf_2
    [(lam anf_3
      (case anf_3 (lam generated_5 (lam generated_4 (con integer 0))) (con integer 0)))
      [anf_2 (con integer 9)]])
    [[(force (builtin mkCons)) (con integer 42)] (con (list integer) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_2
    [(lam anf_3
      (case anf_3 (lam generated_5 (lam generated_4 (con integer 0))) (con integer 0)))
      [anf_2 (con integer 9)]])
    [[(force (builtin mkCons)) (con integer 42)] (con (list integer) [])]])
--- result
error: NonFunctionApplication(Con(Integer(9)), Con(ProtoList(Integer, [Integer(42)])))
--- logs
[]
