crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__list__shared_literal_tails.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let xs#1 : list int = (con (list integer) [21, 42, 7, 9]) in
constr 0 xs#1 (case@List xs#1 of
  Cons head#2 tail#3 -> tail#3) (case@List xs#1 of
  Cons head#4 tail#5 -> tail#5)
--- unoptimized UPLC
(program 1.1.0
  [(lam xs_1
    (constr 0
      xs_1
      (case xs_1 (lam head_2 (lam tail_3 tail_3)) (error))
      (case xs_1 (lam head_4 (lam tail_5 tail_5)) (error))))
    (con (list integer) [21, 42, 7, 9])])
--- optimized Core
let list_field#14 : list int = (con (list integer) [42, 7, 9]) in
constr 0 (con (list integer) [21, 42, 7, 9]) list_field#14 list_field#14
--- optimized UPLC
(program 1.1.0
  [(lam list_field_1
    (constr 0 (con (list integer) [21, 42, 7, 9]) list_field_1 list_field_1))
    (con (list integer) [42, 7, 9])])
--- isolated pass
--- isolated ANF input
let xs#1 : list int = (con (list integer) [21, 42, 7, 9]) in
let anf#6 : list int = case@List xs#1 of
  Cons head#2 tail#3 -> tail#3 in
let anf#7 : list int = case@List xs#1 of
  Cons head#4 tail#5 -> tail#5 in
constr 0 xs#1 anf#6 anf#7
--- isolated folded Core
let list_field#8 : int = 21 in
let list_field#9 : list int = (con (list integer) [42, 7, 9]) in
let xs#1 : list int = (con (list integer) [21, 42, 7, 9]) in
let anf#6 : list int = let head#2 : int = list_field#8 in
let tail#3 : list int = list_field#9 in
tail#3 in
let anf#7 : list int = let head#4 : int = list_field#8 in
let tail#5 : list int = list_field#9 in
tail#5 in
constr 0 xs#1 anf#6 anf#7
--- isolated cleaned Core
let list_field#9 : list int = (con (list integer) [42, 7, 9]) in
constr 0 (con (list integer) [21, 42, 7, 9]) list_field#9 list_field#9
--- isolated UPLC before
(program 1.1.0
  [(lam xs_1
    [(lam anf_6
      [(lam anf_7 (constr 0 xs_1 anf_6 anf_7))
        (case xs_1 (lam head_4 (lam tail_5 tail_5)) (error))])
      (case xs_1 (lam head_2 (lam tail_3 tail_3)) (error))])
    (con (list integer) [21, 42, 7, 9])])
--- isolated UPLC after
(program 1.1.0
  [(lam list_field_9
    (constr 0 (con (list integer) [21, 42, 7, 9]) list_field_9 list_field_9))
    (con (list integer) [42, 7, 9])])
--- result
(constr 0
  (con (list integer) [21, 42, 7, 9])
  (con (list integer) [42, 7, 9])
  (con (list integer) [42, 7, 9]))
--- logs
[]
